@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-18T01:19:06Z",
-  "count_outdated" : 187,
-  "uniques_outdated" : 121,
+  "timestamp" : "2022-05-19T16:46:04Z",
+  "count_outdated" : 193,
+  "uniques_outdated" : 124,
   "count" : 262,
   "uniques" : 153,
   "clones" : [
-    {
-      "timestamp": "2022-05-05T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 5, 6 ],
-      "uniques": 3,
-      "uniques_minmax": [ 2, 3 ]
-    },
     {
       "timestamp": "2022-05-06T00:00:00Z",
       "count": 9,
