@@ -1,12 +1,7 @@
 {
-  "count": 75,
+  "count": 69,
   "uniques": 15,
   "clones": [
-    {
-      "timestamp": "2022-05-05T00:00:00Z",
-      "count": 6,
-      "uniques": 3
-    },
     {
       "timestamp": "2022-05-06T00:00:00Z",
       "count": 9,
