@@ -1,3 +1,10 @@
+2022-05-19T16:46:04Z:
+* notice: last 14d: unq all: 15 69
+* notice: prev accum: outdated-unq outdated-all / unq all: 121 187 / 153 262
+* notice: next accum: outdated-unq outdated-all / unq all: 124 193 / 153 262
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: changed dates: []
+
 2022-05-18T01:19:06Z:
 * notice: last 14d: all unq: 75 15
 * notice: prev accum: outdated-all outdated-unq / all unq: 172 115 / 256 152
